# bilayers

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  PLAN.md  README.md  RESEARCH.md  build_docker.sh  myst.yml  noxfile.py  pixi.toml  pyproject.toml  setup.py  test.ipynb  test_docker.sh
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: actual_pipeline.yml  deploy.yml  docker-build.yml  temp.yml  test.yml
Algorithms/threshold/: Dockerfile  threshold.py
_build/site/: config.json  myst.search.json  myst.xref.json  objects.inv
_build/site/content/: interface.json  main.json  steps-to-create.json  understanding-config.json  whatisbilayers.json
_build/site/public/: WhatIsBilayers?-162c72abcd665569907f31949b62131e.md  WhatIsBilayers?-26ab08c62bd0712608f384886650551b.md  WhatIsBilayers?-30137e3ad48f1f3df399eb6404f8596d.md  WhatIsBilayers?-3e21b882420560c28f6d36272de52f6c.md  WhatIsBilayers?-4221e6dd711f04c5d5d0e2067dbefe02.md  WhatIsBilayers?-48a75ffc2f4c0e0674d6d414c2cbca47.md  WhatIsBilayers?-5c10aa2604ab6803d2a941c794befc7e.md  WhatIsBilayers?-6259f401fb95acb83a2018885075e977.md  WhatIsBilayers?-7bbb3fda1f40ee70909949f539660ec1.md  WhatIsBilayers?-8cfa79b5a990d073695e765fabeb8729.md  WhatIsBilayers?-9ffacc3ebd0166fbd50fbd98d1b384e4.md  WhatIsBilayers?-d82bc7413c24e096ea433d23e05ad6e8.md  interface-7fdf0fb4273e285d1524fe497e79d972.md  main-0c474c5aaafcd1b29385b3fb0f9ac564.md  main-cb52d182fe2cff60c6638769041ee9a3.md  steps_to_create-90ebcfcff293d3ef90e2594a98150d85.md  understanding_config-59cabb39d440b2fd90b62fa5bf584548.md
algorithms/cellpose_inference/: config.yaml
algorithms/classical_segmentation/: Dockerfile  classical_segmentation.py  config.yaml
algorithms/example_algorithm/: config.yaml
algorithms/fiji_headless/: Dockerfile  README.md  config.yaml  threshold.ijm
algorithms/gaussian_smoothing/: Dockerfile  config.yaml  gaussian_smoothing.py
algorithms/instanseg_inference/: Dockerfile  config.yaml  cuda.Dockerfile  pixi.toml  pyproject.toml
algorithms/microsam_inference/: Dockerfile  config.yaml
algorithms/stardist_inference/: config.yaml
bilayers_cli/: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
bilayers_cli/bilayers_cli/: __init__.py  cli.py  cli_generator.py  parse.py
bilayers_cli/tests/: test_module_usage.py  test_parse.py
checks/: check_forbidden_interface_imports.py
docs/custom_algorithm/: custom_algorithm.md  right_base_docker_image.md  steps_to_create.md  supported_interfaces.md  understanding_config.md
docs/developer/: AbstractUserInterface.md  AbstractWorkflowDetails.md  Any.md  Boolean.md  Container.md  Curie.md  Date.md  DateOrDatetime.md  Datetime.md  Decimal.md  DockerImage.md  Double.md  ExecFunction.md  FileTypeEnum.md  Float.md  HiddenArgs.md  Integer.md  Jsonpath.md  Jsonpointer.md  ModeEnum.md  Ncname.md  Nodeidentifier.md  Objectidentifier.md  RadioOptions.md  Sparqlpath.md  SpecContainer.md  String.md  SubTypeEnum.md  Time.md  TypeAlgorithmFromCitation.md  TypeCitations.md  TypeDisplayOnly.md  TypeEnum.md  TypeInput.md  TypeOutput.md  TypeParameter.md  TypeResults.md  Uri.md  Uriorcurie.md  algorithm.md  (+46 more)
docs/standard/: WhatIsBilayers.md
docs/tool_user/: module_introspection.md  steps_to_run.md  tool_user.md
interfaces/: __init__.py  utils.py
interfaces/biomero/: generate.py  task.v0.json
interfaces/cellprofiler_plugin/: cellprofiler_plugin_template.py.j2  generate.py
interfaces/cytomine/: generate.py
interfaces/dockerfiles/: Gradio.Dockerfile
interfaces/gradio/: Gradio.Dockerfile  generate.py  gradio_template.py.j2
interfaces/jupyter/: Jupyter.Dockerfile  generate.py  jupyter_final_validation_template.py.j2  jupyter_shell_command_template.py.j2  jupyter_template.py.j2
interfaces/streamlit/: Streamlit.Dockerfile  generate.py  streamlit_template.py.j2
schema/: validate_schema.yaml
scripts/: build_docker.sh  check_forbidden_interface_imports.py  gendoc.sh  install-pre-commit.sh  lint.sh  pkg_path.sh  test_docker.sh  validate.sh
simple_id_objects.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/Algorithms/cellpose/: config.yaml
src/Algorithms/cellpose_inference/: config.yaml
src/Algorithms/instanseg_inference/: Dockerfile  Dockerfile.cuda  cuda.Dockerfile
src/Algorithms/threshold/: Dockerfile  __init__.py  config.yaml  threshold.py
src/Algorithms/threshold_inference/: Dockerfile  config.yaml
src/Algorithms_tmp/cellpose_inference/: config.yaml
src/Build_tmp/dockerfiles/: Jupyter.Dockerfile
src/Build_tmp/parse/: gradio_template.py.j2
src/Schema/: validate_schema.yaml
src/algorithms/cellpose_inference/: config.yaml
src/algorithms/cellpose_input_output/: config.yaml  support_config.yaml
src/algorithms/classical_segmentation/: Dockerfile  classical_segmentation.py  config.yaml
src/algorithms/example_algorithm/: config.yaml  config.yaml.example
src/algorithms/instanseg_inference/: Dockerfile  Dockerfile_conda  Dockerfile_mamba  Dockerfile_pip  Dockerfile_working_mamba  config.yaml  cuda.Dockerfile  pixi.toml  pyproject.toml
src/bilayers/: __init__.py  _blpath.py  cli.py  cli_generator.py  generate.py  interface_loader.py  parse.py  schema.py  schema.yaml
src/bilayers_cli/: LICENSE  README.md  pyproject.toml
src/bilayers_cli/bilayers_cli/: __init__.py  cli.py  cli_generator.py
src/bilayers_cli/tests/: test_cli_generator.py  test_library_usage.py  test_module_usage.py
src/bilayers_interface_shared/: __init__.py  utils.py
src/bilayers_schema/: __init__.py  types.py
tests/cli/: test_cli_generator.py  test_interface_loader.py  test_library_usage.py  test_module_usage.py
tests/introspection/: __init__.py  test_discovery.py  test_resolver.py  test_scaffold.py
tests/regression/: test_generate_regression.py
tests/test_algorithm/: cellpose_config.yaml  correct_validation_config.yaml  incorrect_validation_config.yaml  parameter_invalid_config.yaml  valid_config.yaml
tests/test_config/: test_validate_configs.py  validate_schema.yaml
tests/test_gradio/: test_generate_cli_command.py
(+29 files in other folders)
