[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilayers"
version = "0.1.0"
description = "Specifications and automated interfaces for wrapped tools with integrated CLI"
authors = [
    {name = "Rajavi Shah", email = "shahraja@broadinstitute.org"},
    {name = "Nodar Gogoberidze", email = "gnodar01@gmail.com"},
    {name = "Beth Cimini", email = "bcimini@broadinstitute.org"}
]
maintainers = [
    {name = "Rajavi Shah", email = "shahraja@broadinstitute.org"},
    {name = "Nodar Gogoberidze", email = "gnodar01@gmail.com"},
    {name = "Beth Cimini", email = "bcimini@broadinstitute.org"}
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.1,<7",
    "jinja2",
    "nbformat",
]

[project.optional-dependencies]
docs = ["mystmd>=1.3.17,<2"]
nox = ["nox>=2024.4.15,<2025"]
linkml = ["linkml", "check-jsonschema"]
test = ["pytest"]
lint = ["ruff"]
dev = [
  "numpy",
  "scipy",
  "scikit-image",
  "ipython",
  "ipywidgets",
  "gradio",
  "pyright",
  "pre-commit",
  "mypy",
  "types-pyyaml",
]

[project.scripts]
bilayers_cli = "bilayers.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bilayers*"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.activation]
env = { DOCKER_CMD = "$(command -v podman || command -v docker)" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.9"

[tool.pixi.pypi-dependencies]
bilayers = { path = ".", editable = true }

[tool.pixi.environments]
dev = ["dev", "docs", "linkml", "test", "lint", "nox"]

[tool.ruff]
# 80 columns are a thing of the past
line-length = 160

[tool.ruff.lint]
# extend linting rules (may overlap with formatting fules)
select = ["W", "F", "C", "E"]
extend-select = [
    "W291",
    "W292",
    "W293",
    "F401",
    "F823",
    "F841",
    "C901",
    "E501"
]
ignore = ["E501"]  # Ignore long-line warnings  

[tool.pyright]
pythonVersion = "3.10"
