[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilayers"
version = "0.1.0"
description = "Specifications and automated interfaces for wrapped tools with integrated CLI"
authors = [
    {name = "Rajavi Shah", email = "shahraja@broadinstitute.org"},
    {name = "Nodar Gogoberidze", email = "gnodar01@gmail.com"},
    {name = "Beth Cimini", email = "bcimini@broadinstitute.org"}
]
maintainers = [
    {name = "Rajavi Shah", email = "shahraja@broadinstitute.org"},
    {name = "Nodar Gogoberidze", email = "gnodar01@gmail.com"},
    {name = "Beth Cimini", email = "bcimini@broadinstitute.org"}
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.1,<7",
]

[project.optional-dependencies]
# Per Interface Extras
gradio = ["jinja2>=3.0,<4", "gradio"]
jupyter = ["jinja2>=3.0,<4", "nbformat"]
cellprofiler_plugin = ["jinja2>=3.0,<4"]
streamlit = ["jinja2>=3.0,<4", "streamlit"]

# Convenience Group Extras
interfaces = [
    "bilayers[gradio]",
    "bilayers[jupyter]",
    "bilayers[streamlit]",
]
plugins = [
    "bilayers[cellprofiler_plugin]",
]

# Tooling Extras
docs = ["mystmd>=1.3.17,<2"]
nox = ["nox"]
linkml = ["linkml"]
test = [
    "pytest",
    "bilayers[interfaces]",
    "bilayers[plugins]",
    "bilayers[linkml]",
]
lint = ["ruff"]

# dev extras
dev = [
  "numpy",
  "scipy",
  "scikit-image",
  "ipython",
  "ipywidgets",
  "pyright",
  "mypy",
  "types-pyyaml",
  "bilayers[interfaces]",
  "bilayers[plugins]",
]

[project.scripts]
bilayers_cli = "bilayers.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bilayers*"]

[tool.setuptools.package-data]
bilayers = ["schema.yaml"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.feature.podman.activation]
env = { DOCKER_CMD = "podman" }

[tool.pixi.feature.docker.activation]
env = { DOCKER_CMD = "docker" }

[tool.pixi.feature.interfaces.pypi-dependencies]
jinja2 = ">=3.0,<4"
nbformat = "*"

[tool.pixi.feature.plugins.pypi-dependencies]
jinja2 = ">=3.0,<4"

[tool.pixi.feature.dev.pypi-dependencies]
pre-commit = "*"

[tool.pixi.feature.dev.activation]
scripts = ["scripts/install-pre-commit.sh"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.9"
requests = ">=2.32.5,<3"

[tool.pixi.pypi-dependencies]
bilayers = { path = ".", editable = true }

[tool.pixi.environments]
dev = ["dev", "interfaces", "plugins", "docs", "linkml", "test", "lint", "nox", "podman"]
dockerdev = ["dev", "interfaces", "plugins", "docs", "linkml", "test", "lint", "nox", "docker"]

[tool.ruff]
# 80 columns are a thing of the past
line-length = 160
exclude = ["tests/fixtures/golden"]

[tool.ruff.lint]
# extend linting rules (may overlap with formatting fules)
select = ["W", "F", "C", "E"]
extend-select = [
    "W291",
    "W292",
    "W293",
    "F401",
    "F823",
    "F841",
    "C901",
    "E501"
]
ignore = ["E501"]  # Ignore long-line warnings

[tool.pyright]
pythonVersion = "3.10"
