[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilayers"
version = "0.1.0"
description = "Specifications and automated interfaces for wrapped tools with integrated CLI"
authors = [
    {name = "Rajavi Shah", email = "shahraja@broadinstitute.org"},
    {name = "Nodar Gogoberidze", email = "gnodar01@gmail.com"},
    {name = "Beth Cimini", email = "bcimini@broadinstitute.org"}
]
maintainers = [
    {name = "Rajavi Shah", email = "shahraja@broadinstitute.org"},
    {name = "Nodar Gogoberidze", email = "gnodar01@gmail.com"},
    {name = "Beth Cimini", email = "bcimini@broadinstitute.org"}
]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0.1,<7",
    "bilayers-schema @ git+https://github.com/bilayer-containers/bilayers-schema.git",
]

[project.optional-dependencies]
# Per Interface Extras
gradio = ["jinja2"]
jupyter = ["jinja2", "nbformat"]
cellprofiler_plugin = ["jinja2"]
streamlit = ["jinja2"]

# Convenience Group Extras
interfaces = [
    "bilayers[gradio]",
    "bilayers[jupyter]",
    "bilayers[streamlit]",
]
plugins = [
    "bilayers[cellprofiler_plugin]",
]

# Tooling Extras
docs = ["mystmd>=1.3.17,<2"]
nox = ["nox"]
linkml = ["linkml"]
test = [
    "pytest",
    "bilayers[interfaces]",
    "bilayers[plugins]",
    "bilayers[linkml]",
]
lint = ["ruff"]

# dev extras
dev = [
  "numpy",
  "scipy",
  "scikit-image",
  "ipython",
  "ipywidgets",
  "pyright",
  "mypy",
  "types-pyyaml",
  "gradio",
  "streamlit",
  "bilayers[interfaces]",
  "bilayers[plugins]",
]

[project.scripts]
bilayers_cli = "bilayers.cli:cli"

[project.entry-points."bilayers.interfaces"]
gradio = "interfaces.gradio.generate:generate"
jupyter = "interfaces.jupyter.generate:generate"
streamlit = "interfaces.streamlit.generate:generate"
cellprofiler_plugin = "interfaces.cellprofiler_plugin.generate:generate"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["bilayers*", "interfaces*"]
exclude = ["build*", "tests*"]

[tool.setuptools.package-data]
"*" = ["**/*.j2"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.feature.podman.activation]
env = { DOCKER_CMD = "podman" }

[tool.pixi.feature.docker.activation]
env = { DOCKER_CMD = "docker" }

[tool.pixi.feature.dev.pypi-dependencies]
pre-commit = "*"

[tool.pixi.feature.dev.activation]
scripts = ["scripts/install-pre-commit.sh"]

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.9"
requests = ">=2.32.5,<3"

[tool.pixi.pypi-dependencies]
bilayers = { path = ".", editable = true }

[tool.pixi.environments]
dev = ["dev", "docs", "linkml", "test", "lint", "nox", "podman", "interfaces", "plugins"]
dockerdev = ["dev", "docs", "linkml", "test", "lint", "nox", "docker", "interfaces", "plugins"]

[tool.ruff]
# 80 columns are a thing of the past
line-length = 160
exclude = ["tests/fixtures/golden"]

[tool.ruff.lint]
# extend linting rules (may overlap with formatting fules)
select = ["W", "F", "C", "E"]
extend-select = [
    "W291",
    "W292",
    "W293",
    "F401",
    "F823",
    "F841",
    "C901",
    "E501"
]
ignore = ["E501"]  # Ignore long-line warnings

[tool.pyright]
pythonVersion = "3.10"
